# sing-box-tproxy

./: .gitignore  .pdm-python  .pre-commit-config.yaml  CHANGELOG.md  README.md  README.zh-CN.md  mkdocs.yml  noxfile.py  playbook.yaml  pyproject.toml  site.yaml
.github/workflows/: docs.yaml  nox.yaml  publish-to-pypi.yaml  publish-to-test-pypi.yaml  pypi-publish.yaml  tests.yaml
config/: base.json  base.json.j2  subscriptions.json  subscriptions.json.j2
contrib/disable-cloud-init-network-config/: playbook.yaml
contrib/disable-cloud-init-network-config/templates/: 90-default.yaml.j2
contrib/pwsh/: Set-ProxyGateway.ps1
docs/: architecture.md
playbooks/: sing_box_server.yaml  sing_box_tproxy.yaml
playbooks/tasks/: pre_flight_checks.yml
roles/sing_box_config/defaults/: main.yaml  main.yml
roles/sing_box_config/handlers/: main.yaml
roles/sing_box_config/meta/: main.yml
roles/sing_box_config/tasks/: base.yml  dist_wheel.yml  main.yaml  main.yml  state.yml
roles/sing_box_config/templates/: base.json.j2
roles/sing_box_defaults/defaults/: main.yaml  main.yml
roles/sing_box_install/tasks/: main.yaml  main.yml  sing_box_user.yml
roles/sing_box_server/defaults/: main.yml
roles/sing_box_server/tasks/: generate_credentials.yml  main.yml  validate.yml
roles/sing_box_server/templates/: client_outbounds.json.j2  config.json.j2  (+2 more)
src/sing_box_config/: cmd.py  export.py  logging.py
src/singbox_config/: cmd.py  config.py  export.py
src/singbox_tproxy/: cmd.py  config.py  export.py  utils.py
tasks/: pre_flight_checks.yml
tests/: test_shadowsocks.py
(+36 files in other folders)
